# b2g-procurement

./: .env  .gitignore  brand-discovery-worksheet.md  build_calculator_v3.py  kritikaal_leads_export.xlsx  requirements.txt  tenders.db
.claude/: launch.json  settings.local.json
.obsidian/: workspace.json
A-agents/: 01-architect-agent.md
B-brain/: 01-tech-stack.md
C-core/: 01-business-context.md  02-target-audience.md
M-memory/: delta_report_2026-04-17_00-37.md  delta_report_2026-05-13_22-53.md  run_history.json  run_summary.json
T-tools/: agent_overrides.json  cleanup_false_positives.py  competitor_agent.py  crm_sync.py  dashboard.py  db_init.py  db_schema.sql  delta_reporter.py  exporter.py  instagram_agent.py  lateral_industry_agent.py  launch_dashboard.pyw  leads.db  live_run.py  nlp_classifier.py  outreach_helper.py  procurement_agent.py  procurement_ingest.py  purchase_intent_agent.py  re_enrich.py  scrapers.py  shopify_agent.py  social_agent.py  test_pipeline.py
_PAUSED_CONTENT_YOUTUBE_REDDIT/: MIGRATION_PLAN_YOUTUBE.md
_SIDE_VENTURE_AMAZON_FBA/: blended_strategy.py  channel_comparison.py  compliance_sop.md  landed_cost_calculator.py  sourcing_engine.py  tariff_heatmap.py
the-system-v8/the-system-v8/T-tools/01-skills/youtube-extraction/: .env  cookies.txt  cookies.txt.txt  extract_insight.py  pyproject.toml
the-system-v8/the-system-v8/T-tools/01-skills/youtube-extraction/ytinsights/: .env  __main__.py  state.py  transcripts.py
the-system-v8/the-system-v8/T-tools/01-skills/youtube-extraction/ytinsights/discovery/: dataapi.py  ytdlp.py
(+399 files in other folders)
